Fix overflow and add truncation for router config details

--- a/ui/src/router/details/components/router_details_header/RouterDetailsPageHeader.scss
+++ b/ui/src/router/details/components/router_details_header/RouterDetailsPageHeader.scss
@@ -1,3 +1,8 @@
+.euiFlexGroup--justifyContentSpaceBetween {
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
 .euiFlexItem--endpoint {
   max-width: calc(60% - 24px);
 
